tests/derive_errors/enum/empty.stderr
error: jtd-derive does not support enums with no variants
 --> tests/derive_errors/enum/empty.rs:2:6
  |
2 | enum Empty {}
  |      ^^^^^
