tests/derive_errors/enum/empty.rs
#[derive(jtd_derive::JsonTypedef)]
enum Empty {}

fn main() {}
